# packages/backend/src/buildings/dto/create-building.dto.ts
@@ -152,17 +152,6 @@ export class CreateBuildingDto {
   email?: string
 
   @ApiProperty({
-    example: 1,
-    description: 'Manager ID',
-  })
-  @IsInt()
-  @IsNotEmpty()
-  @Transform(({ value }) =>
-    typeof value === 'string' ? parseInt(value, 10) : Number(value)
-  )
-  managerId: number
-
-  @ApiProperty({
     example: [Amenities.ELEVATOR],
     description: 'Building amenities',
     enum: Amenities,
